[gd_scene load_steps=2 format=3 uid="uid://dwxt6rf7ypgit"]

[ext_resource type="Script" uid="uid://bxf0svvdg7t5i" path="res://addons/resource_viewer/resource_viewer_ui.gd" id="1_script"]

[node name="ResourceViewer" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_script")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="Toolbar" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="SortLabel" type="Label" parent="MarginContainer/VBoxContainer/Toolbar"]
layout_mode = 2
text = "Sort by:"

[node name="SortOption" type="OptionButton" parent="MarginContainer/VBoxContainer/Toolbar"]
layout_mode = 2
selected = 0
item_count = 4
popup/item_0/text = "Name"
popup/item_0/id = 0
popup/item_1/text = "Price"
popup/item_1/id = 1
popup/item_2/text = "Rarity"
popup/item_2/id = 2
popup/item_3/text = "Rating"
popup/item_3/id = 3

[node name="SortDirectionBtn" type="Button" parent="MarginContainer/VBoxContainer/Toolbar"]
layout_mode = 2
tooltip_text = "Toggle sort direction"
text = "â†‘"

[node name="Separator" type="VSeparator" parent="MarginContainer/VBoxContainer/Toolbar"]
layout_mode = 2

[node name="RefreshBtn" type="Button" parent="MarginContainer/VBoxContainer/Toolbar"]
layout_mode = 2
tooltip_text = "Rescan resource folders"
text = "Refresh"

[node name="TabContainer" type="TabContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
current_tab = 0

[node name="PowerUps" type="HSplitContainer" parent="MarginContainer/VBoxContainer/TabContainer"]
layout_mode = 2
split_offset = 300
metadata/_tab_index = 0
metadata/_tab_name = "PowerUps (25)"

[node name="ItemList" type="ItemList" parent="MarginContainer/VBoxContainer/TabContainer/PowerUps"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
allow_reselect = true
item_count = 25
item_0/text = "Blue Slime [L] $450"
item_1/text = "Bonus Money [U] $150"
item_2/text = "Bonus Mult [R] $150"
item_3/text = "Cash Flow [U] $150"
item_4/text = "Chance 520 [U] $200"
item_5/text = "Chaos Dice [U] $180"
item_6/text = "Evens No Odds [C] $150"
item_7/text = "Extra Dice [C] $100"
item_8/text = "Extra Rolls [C] $100"
item_9/text = "Foursome [E] $250"
item_10/text = "Full House Fortune [C] $75"
item_11/text = "Green Monster [U] $200"
item_12/text = "Green Slime [C] $75"
item_13/text = "Highlighted Score [R] $300"
item_14/text = "Money Multiplier [R] $300"
item_15/text = "Money Well Spent [C] $75"
item_16/text = "Perfect Strangers [R] $300"
item_17/text = "Pin Head [R] $275"
item_18/text = "Purple Slime [R] $275"
item_19/text = "Red Power Ranger [U] $175"
item_20/text = "Red Slime [U] $150"
item_21/text = "Step by Step [C] $75"
item_22/text = "The Consumer is Always Right [R] $400"
item_23/text = "Wild Dots [R] $250"
item_24/text = "Yahtzee Mult [L] $200"

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer/VBoxContainer/TabContainer/PowerUps"]
layout_mode = 2
size_flags_horizontal = 3

[node name="PropertyGrid" type="GridContainer" parent="MarginContainer/VBoxContainer/TabContainer/PowerUps/ScrollContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/h_separation = 12
theme_override_constants/v_separation = 8
columns = 2

[node name="Consumables" type="HSplitContainer" parent="MarginContainer/VBoxContainer/TabContainer"]
visible = false
layout_mode = 2
split_offset = 300
metadata/_tab_index = 1
metadata/_tab_name = "Consumables (30)"

[node name="ItemList" type="ItemList" parent="MarginContainer/VBoxContainer/TabContainer/Consumables"]
layout_mode = 2
size_flags_horizontal = 3
allow_reselect = true
item_count = 30
item_0/text = "Add Power Up Slot $25"
item_1/text = "Any Score $50"
item_2/text = "Double or Nothing $25"
item_3/text = "Double Score $25"
item_4/text = "Empty Shelves $50"
item_5/text = "Extra Rolls $25"
item_6/text = "Go Broke or Go Home $50"
item_7/text = "Green Envy $50"
item_8/text = "Master Upgrade $500"
item_9/text = "One Extra Dice $25"
item_10/text = "Poor House $50"
item_11/text = "Quick Cash $25"
item_12/text = "Random Uncommon Power-Up $200"
item_13/text = "Score Reroll $25"
item_14/text = "Shop Expansion $25"
item_15/text = "The Pawn Shop $25"
item_16/text = "The Rarities $50"
item_17/text = "Upgrade 3oak $75"
item_18/text = "Upgrade 4oak $75"
item_19/text = "Upgrade Chance $75"
item_20/text = "Upgrade Fives $75"
item_21/text = "Upgrade Fours $75"
item_22/text = "Upgrade Full House $75"
item_23/text = "Upgrade Lg. Straight $75"
item_24/text = "Upgrade Ones $75"
item_25/text = "Upgrade Sixes $75"
item_26/text = "Upgrade Sm. Straight $75"
item_27/text = "Upgrade Threes $75"
item_28/text = "Upgrade Twos $75"
item_29/text = "Upgrade Yahtzee $75"

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer/VBoxContainer/TabContainer/Consumables"]
layout_mode = 2
size_flags_horizontal = 3

[node name="PropertyGrid" type="GridContainer" parent="MarginContainer/VBoxContainer/TabContainer/Consumables/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/h_separation = 12
theme_override_constants/v_separation = 8
columns = 2

[node name="Mods" type="HSplitContainer" parent="MarginContainer/VBoxContainer/TabContainer"]
visible = false
layout_mode = 2
split_offset = 300
metadata/_tab_index = 2
metadata/_tab_name = "Mods (7)"

[node name="ItemList" type="ItemList" parent="MarginContainer/VBoxContainer/TabContainer/Mods"]
layout_mode = 2
size_flags_horizontal = 3
allow_reselect = true
item_count = 7
item_0/text = "Evens Only $50"
item_1/text = "Five By One $50"
item_2/text = "Gold Six $75"
item_3/text = "High Roller $150"
item_4/text = "Odd Only $50"
item_5/text = "Three But Three $50"
item_6/text = "Wild Dice $300"

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer/VBoxContainer/TabContainer/Mods"]
layout_mode = 2
size_flags_horizontal = 3

[node name="PropertyGrid" type="GridContainer" parent="MarginContainer/VBoxContainer/TabContainer/Mods/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/h_separation = 12
theme_override_constants/v_separation = 8
columns = 2

[node name="Colors" type="HSplitContainer" parent="MarginContainer/VBoxContainer/TabContainer"]
visible = false
layout_mode = 2
split_offset = 300
metadata/_tab_index = 3
metadata/_tab_name = "Colors (4)"

[node name="ItemList" type="ItemList" parent="MarginContainer/VBoxContainer/TabContainer/Colors"]
layout_mode = 2
size_flags_horizontal = 3
allow_reselect = true
item_count = 4
item_0/text = "Blue Dice $200"
item_1/text = "Green Dice $75"
item_2/text = "Purple Dice $150"
item_3/text = "Red Dice $100"

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer/VBoxContainer/TabContainer/Colors"]
layout_mode = 2
size_flags_horizontal = 3

[node name="PropertyGrid" type="GridContainer" parent="MarginContainer/VBoxContainer/TabContainer/Colors/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/h_separation = 12
theme_override_constants/v_separation = 8
columns = 2

[node name="Challenges" type="HSplitContainer" parent="MarginContainer/VBoxContainer/TabContainer"]
visible = false
layout_mode = 2
split_offset = 300
metadata/_tab_index = 4
metadata/_tab_name = "Challenges (7)"

[node name="ItemList" type="ItemList" parent="MarginContainer/VBoxContainer/TabContainer/Challenges"]
layout_mode = 2
size_flags_horizontal = 3
allow_reselect = true
item_count = 7
item_0/text = "Basic Bitch (300 pts) $100"
item_1/text = "Disabled Dog (222 pts) $222"
item_2/text = "Kiddy Ride (150 pts) $150"
item_3/text = "Lockdown (250 pts) $150"
item_4/text = "Precious Points (300 pts) $300"
item_5/text = "Pretty Penny (200 pts) $150"
item_6/text = "The Crossing (300 pts) $350"

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer/VBoxContainer/TabContainer/Challenges"]
layout_mode = 2
size_flags_horizontal = 3

[node name="PropertyGrid" type="GridContainer" parent="MarginContainer/VBoxContainer/TabContainer/Challenges/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/h_separation = 12
theme_override_constants/v_separation = 8
columns = 2

[node name="Debuffs" type="HSplitContainer" parent="MarginContainer/VBoxContainer/TabContainer"]
visible = false
layout_mode = 2
split_offset = 300
metadata/_tab_index = 5
metadata/_tab_name = "Debuffs (5)"

[node name="ItemList" type="ItemList" parent="MarginContainer/VBoxContainer/TabContainer/Debuffs"]
layout_mode = 2
size_flags_horizontal = 3
allow_reselect = true
item_count = 5
item_0/text = "Costly Roll"
item_1/text = "Disabled Twos"
item_2/text = "Lock Dice"
item_3/text = "Rolling Penalty"
item_4/text = "The Division"

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer/VBoxContainer/TabContainer/Debuffs"]
layout_mode = 2
size_flags_horizontal = 3

[node name="PropertyGrid" type="GridContainer" parent="MarginContainer/VBoxContainer/TabContainer/Debuffs/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/h_separation = 12
theme_override_constants/v_separation = 8
columns = 2
